# thinking-agent

./: .gitignore  README.md  REFLECTION.md  pyproject.toml
agent_client/: main.py  pyproject.toml
mcp_server/: knowledge_base.py  main.py  pyproject.toml
