[project]
name = "agent-client"
version = "0.1.0"
description = "A langchain agent client that is incorporated with the MultiServerMCPClient, tools and reasoning model to interact with the MCP server through streamable-HTTP Transporter."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.3.1",
    "langchain>=1.3.1",
    "langchain-core>=1.4.0",
    "langchain-mcp-adapters>=0.2.2",
    "langchain-openai>=1.2.2",
    "langgraph>=1.2.1",
    "python-dotenv>=1.2.2",
]
