[project]
name = "mcp-server"
version = "0.1.0"
description = "The MCP(Model Control Protocol) server that exposes reflector tool and CRAG resources to the agent client."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "faiss-cpu>=1.14.2",
    "fastmcp>=3.3.1",
    "langchain>=1.3.1",
    "langchain-community>=0.4.2",
    "python-dotenv>=1.2.2",
    "tavily-python>=0.7.24",
]
